-【fix】太字や文字色などの記法ヘルパーが、記法の入れ子をうまく処理できない。
-【fix】ブログの説明に「?」を入力すると「{<br>}」に変換される。
-【fix】ユーザーcssのsyntaxハイライトサンプルが間違っていた。（[http://www.ujiya.net/0268:#k268p2:Thanks to ぉゅぅ]）
-【fix】Text-DB使用時、「__END_BLK_DATA」のみの行を書くと前の行と連結される。
-【fix】2つめのRSS配信が設定できない。
-【fix】デザイン初期化時、標準デザインをロードしないとスマホメニューを再生成していなかった。

*Ver3.01 : 2015/01/09

-【fix】コメントスパム対策での、投稿ボタン有効化までの10秒ウエイトが無効になっていた。
-【fix】日付指定で記事を表示したときのメッセージがおかしい。
-【fix】601px以上のサムネイルが生成できない。（[http://ac206223.ppp.asahi-net.or.jp/adiary/diary/hirosugu/020#k20p1.1:Thanks to 平山]）
-【fix】アルバムを一度も開いていない状態で、記事からファイルをアップロードすると失敗する。
-【fix】日付変更時間無効化（1/1と4/1）の処理が完全ではなかった。
-【fix】特殊なリンクkey（%xxや+等）を持つ記事にコメントした際、記事に戻らない。

*Ver3.00 : 2015/12/30

-cuteテーマを収録しました
-.gitignoreの書式を変更
-標準フォントに「メイリオ」を指定
-アルバムのサムネイルにカスタムサイズを許可。（[http://ac206223.ppp.asahi-net.or.jp/adiary/diary/hirosugu/018:Thanks to 平山]）
-iframeやimg等で外部サービスを埋め込む際、可能な限りhttpsで埋め込むように変更。（[key:0381:#c4:Thanks to リップル]）
-コンテンツkeyの最大文字数を緩和しました。（[key:0381:#c7:Thanks to yosuke]）
-Queryを含む外部リンクを記述可能にしました。（[key:0381:#c7:Thanks to yosuke]）
-【fix】同時編集ロック機能がオフにできない。
-【fix】{[*section_number]}等が無効になっていた。（[http://ac206223.ppp.asahi-net.or.jp/adiary/diary/hirosugu/018:Thanks to 平山]）
-【fix】サムネイル再生成時のダイアログが正しくなかった。
-【fix】?を含むコンテンツキーの処理で問題があった
-【fix】コンテンツ一覧画面から右クリックでリンクを開いた時、正しく開けないことがあった
-【fix】「[http://adiary.org/devman/plugin/events:#jscss:イベントCSS]」がうまく動作していなかった

*Ver3.0 RC2.1: 2015/11/29

-【fix】コンテンツタイトルに「"'<>」などの文字を使用すると、親ノード指定時などに文字化けする。
-【fix】スマホメニュー設定の不具合修正

*Ver3.0 RC2: 2015/11/28

-デザイン編集を強化しました。
--記事ヘッダを編集できるようにしました。
--単一記事表示と複数記事表示のそれぞれで、記事ヘッダとフッタを編集できるようにしました。
--複数記事表示時に、記事と記事の間に出力するモジュールを編集できるようにしました。
-[http://adiary.org/v3man/Satsuki-tag/tex:#mathjax:MathJaxに対応しました]。
-trust_mode時に使える「JavaScript入力プラグイン」を作成しました。
-記事一覧から、複数の記事のタグを一括編集できるようになりました。
-textarea を 'display: block' に変更しました。
-Twitterへの通知送信を更新通知Pingの設定と連動するようにしました。
-{[asin:XXXX:image]}記法使用時、スライドショー（Lightbox2）の対象にならないようにしました。
-付加情報リビルド時にタグ情報テーブルも再生成するようにしました。
-ツリー編集画面で項目編集中にツリー内の別の場所をクリックしたら編集を終了するようにしました。