@@ -21,6 +21,7 @@
 -【fix】Text-DB使用時、「__END_BLK_DATA」のみの行を書くと前の行と連結される。
 -【fix】2つめのRSS配信が設定できない。
 -【fix】デザイン初期化時、標準デザインをロードしないとスマホメニューを再生成していなかった。
+-【security-fix】第３者にレンタルしている場合、admin_trsut_modeが有効なとき、管理者がブログの再構築を行うと、trsut_modeで記事が再構築されてしまう。問題に対処するため、blogidと同じユーザーidを参照し、そのidが存在し管理者でない場合は、再構築時にtrsut_modeをoffにするよう仕様変更しました。((すでにそのような状況の場合は、システム管理→アップデートから全ブログを再構築してください。))
 
 *Ver3.01 : 2015/01/09
 
